Add project metric progress view
